style.css
.map {
    position: absolute;
    top: 0px;
    left: 0px;
}

h1 {
  font-family: Helvetica;
  font-weight: 100;
}

body {
  color: black;
  text-align:center;
  font-family: arial;
}

.top {
    position: absolute;
    top: 0px;
    left: 90px;
}

.navigation {
    position: relative;
}

.nav {
    margin: 0px;
    padding: 0px;
    list-style: none;
}

.nav li {
    float: left;
    width: 160px;
    position: relative;
}

.nav li a {
    background: white;
    color: black;
    display: block;
    padding: 7px 8px;
    text-decoration: none;
    border-top: 1px solid #069;
}

/*.nav li a:hover {
    color: #069;
}*/

.nav .boutiques {
    color: #fb177f;
}

.nav .restaurants {
    color: #1450fb;
}

.nav .bars {
    color: #ec7c22;
}

.nav .galleries {
    color: #21c89e;
}


/*=== submenu ===*/

.nav ul {
    display: none;
    position: absolute;
    margin-left: 0px;
    list-style: none;
    padding: 0px;
}

.nav ul li {
    width: 160px;
    float: left;
}

.nav ul a {
    display: block;
    height: 15px;
    padding: 7px 8px;
    color: #black;
    text-decoration: none;
    border-bottom: 1px solid #222;
}

.nav ul li a:hover {
    color: #069;
}

